samples/_failures_safe/1761270440_a97dda_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_edda0e8b.c: In function ‘main’:
./samples/SAFE/__tmp_edda0e8b.c:161: error: expected ‘(’ at end of input
./samples/SAFE/__tmp_edda0e8b.c:160:9: error: expected declaration or statement at end of input
  160 |         if
      |         ^~
./samples/SAFE/__tmp_edda0e8b.c:160:9: error: expected declaration or statement at end of input
